--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tomic/react": "^0.31.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
